# VellumCore

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dashboard  Dockerfile.native-prover  Dockerfile.prover  Dockerfile.stress  Dockerfile.verifier  README.md  SECURITY.md  alembic.ini  benchmark_batch.py  benchmark_comparison.py  bootstrap_dev_keys.sh  dashboard_service.py  docker-compose.grpc.yml  docker-compose.yml  down_infra.sh  evaluate_vellum_pivot.py  maintenance_worker.py  prover_service.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_systematic_study.sh  setup_framework.sh  start_infra.sh  stress_tester.py  systematic_vellum_analysis.py  up_infra.sh  verifier_service.py  worker.py
.github/workflows/: ci.yml  nightly-e2e.yml  provider-benchmark.yml
circuits/aml_check/: aml_check.circom  manifest.json
circuits/batch_credit_check/: batch_credit_check.circom  manifest.json
circuits/complexity_100k/: complexity_100k.circom  manifest.json
circuits/complexity_10k/: complexity_10k.circom  manifest.json
circuits/complexity_1k/: complexity_1k.circom  manifest.json
circuits/credit_check/: credit_check.circom  manifest.json
circuits/dti_check/: dti_check.circom  manifest.json
circuits/proof_of_reserves_v1/: manifest.json  proof_of_reserves_v1.circom
circuits/reserve_ratio_check/: manifest.json  reserve_ratio_check.circom
circuits/zk_kyc_v1/: manifest.json  zk_kyc_v1.circom
config/: bank_public_keys.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CI.md  CIRCUIT_YAML_GUIDE.md  COMPATIBILITY.md  CONFIGURATION.md  CUTOVER.md  DEVELOPMENT.md  DLQ_LIFECYCLE.md  MIGRATIONS.md  MIGRATION_V4_TO_V5.md  MIGRATION_V5_TO_V6.md  MIGRATION_V6_TO_V7_RUNTIME.md  OPERATIONS.md  POLICY_PACKS.md  README.md  REFERENCE_SERVICES.md  RELEASE_CHECKLIST.md  SDK.md  SECURITY.md  TROUBLESHOOTING.md
docs/releases/: v5.0.0.md  v6.0.0.md
examples/: policy_run_sdk.py
examples/real_policy_runs/: portfolio_consumer_month_end_pass.json  portfolio_mortgage_q1_pass.json  portfolio_sme_watchlist_fail.json
native_prover/: Cargo.toml  README.md  build.rs
native_prover/src/: backend.rs  cli.rs  lib.rs  main.rs  parsing.rs  service.rs  verification.rs
observability/: otel-collector-config.yaml  tempo.yaml
policy_packs/lending_risk_portfolio_v1/: manifest.json  policy_spec.yaml
policy_packs/lending_risk_v1/: manifest.json  policy_spec.yaml
policy_packs/proof_of_reserves_v1/: manifest.json
policy_packs/zk_kyc_v1/: manifest.json
proto/: vellum_prover.proto
scripts/: sync_requirements.py
sentinel_zk/: __init__.py  auth.py  batching.py  circuit_discovery.py  config.py  errors.py  proof_store.py  registry.py  schemas.py
sentinel_zk/providers/: __init__.py  base.py  snarkjs_provider.py
study_results/: results_batch_100.json  results_batch_1000.json  results_batch_250.json  results_batch_750.json
systematic_study/: benchmark_batch.py  benchmark_comparison.py  benchmark_policy_runs.py  collect_shadow_metrics.py  evaluate_cutover_gate.py  evaluate_vellum_pivot.py  run_provider_benchmark.sh  run_systematic_study.sh  systematic_vellum_analysis.py
systematic_study/reports/: report_finance_crypto.md  report_math.md
systematic_study/study_results/: results_batch_500.json
tests/: conftest.py  test_auth_security.py  test_batch_prepare_input.py  test_batch_schema.py  test_circuit_discovery.py  test_circuit_security_constraints.py  test_cli_module.py  test_database_layer.py  test_grpc_prover_provider.py  test_job_attempts.py  test_metrics_security.py  test_observability.py  test_private_input_schema.py  test_proof_store.py  test_registry.py  test_runtime_defaults.py  test_security_config.py  test_security_helpers.py  test_shadow_provider.py  test_snarkjs_provider.py  test_stress_tester.py  test_vault_client.py
tests/contracts/: test_v5_openapi_contract.py  test_v6_openapi_contract.py
tests/e2e/: test_compose_e2e.py
tests/integration/: test_artifact_validation.py  test_dashboard_routes.py  test_job_backend.py  test_prover_v5_routes.py  test_prover_v6_routes.py  test_verifier_v5_routes.py  test_verifier_v6_routes.py
tests/unit/: test_attestation_bundle.py  test_cutover_gate.py  test_cutover_scripts.py  test_dashboard_service_internal.py  test_dual_track.py  test_error_mapping.py  test_explainability.py  test_failure_triage.py  test_framework_config.py  test_framework_engine.py  test_framework_types.py  test_http_legacy.py  test_legacy_policy_runtime_and_lending.py  test_maintenance.py  test_policy_compiler.py  test_policy_compiler_cli.py  test_policy_compiler_layers.py  test_policy_engine.py  (+6 more)
vellum_core/: __init__.py  attestation_bundle.py  auth.py  celery_app.py  circuit_discovery.py  cli.py  config.py  cutover_gate.py  database.py  errors.py  http_auth.py  http_legacy.py  maintenance.py  metrics.py  observability.py  policy_parameters.py  policy_registry.py  policy_runtime.py  proof_store.py  registry.py  run_contract.py  schemas.py  security.py  vault.py  versioning.py
(+82 files in other folders)
